<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_dashboard"
        android:icon="@android:drawable/ic_menu_compass"
        android:title="@string/nav_dashboard" />
    
    <item
        android:id="@+id/nav_tasks"
        android:icon="@android:drawable/ic_menu_edit"
        android:title="@string/nav_tasks" />
    
    <item
        android:id="@+id/nav_habits"
        android:icon="@android:drawable/ic_menu_today"
        android:title="@string/nav_habits" />
    
    <item
        android:id="@+id/nav_goals"
        android:icon="@android:drawable/ic_menu_compass"
        android:title="@string/nav_goals" />
    
    <item
        android:id="@+id/nav_profile"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="@string/nav_profile" />
</menu>
